# esp32_st7789v

./: README.md  partitions.csv
components/image/: CMakeLists.txt
components/image/web_image/: index.html  ota.html  reboot.html  wifimanager.html  wifimanager_softap.html
components/image/web_image/css/: style.css
components/image/web_image/js/: script.js
components/lvgl/: Kconfig
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl_esp32_drivers/: lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: esp_lcd_backlight.c
main/: CMakeLists.txt  main.c  url_handlers.c  url_handlers.h  web_wifi_config.c  web_wifi_config.h  wifi_sta_ap.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_display_handler.c  ui_display_handler.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.h  ui_comp_alarm_comp.c  ui_comp_hook.c  ui_comp_hook.h
main/ui/fonts/: siyuan_simple_20.c
main/ui/images/: ui_img_1772208564.c  ui_img_277457461.c  ui_img_341460266.c  ui_img_556198778.c  ui_img_745566655.c  ui_img_845915064.c  ui_img_album_png.c  ui_img_avatar_png.c  ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_pattern_png.c  ui_img_sls_logo_png.c  ui_img_sticker_13_png.c  ui_img_tq_03duoyun_png.c
main/ui/screens/: ui_Alarm.c  ui_Call.c  ui_Chat.c  ui_Clock.c  ui_Music_Player.c  ui_Screen1.c  ui_Splash.c  ui_Weather.c
main/util/network/: url_handlers.c  url_handlers.h  web_wifi_config.c  web_wifi_config.h  wifi_sta_ap.h
main/util/time/: ds1302.c  ds1302.h  lv_time_handler.c  lv_time_handler.h
(+1 files in other folders)
